--- a/src/EduNet.Backend.Api/EduNet.Backend.Api.csproj
+++ b/src/EduNet.Backend.Api/EduNet.Backend.Api.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EduNet.Backend.Data\EduNet.Backend.Data.csproj" />
+    <ProjectReference Include="..\EduNet.Backend.Service\EduNet.Backend.Service.csproj" />
   </ItemGroup>
 
 </Project>
