--- a/src/EduNet.Backend.Service/EduNet.Backend.Service.csproj
+++ b/src/EduNet.Backend.Service/EduNet.Backend.Service.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\EduNet.Backend.Domain\EduNet.Backend.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
