Add Email connection in apsettings.json

--- a/src/EduNet.Backend.Api/appsettings.json
+++ b/src/EduNet.Backend.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost; Port=5432; Database=EduNetDb; User Id=postgres; Password=1622;"
+  },
+  "Email": {
+    "Host": "smtp.gmail.com",
+    "EmailAddress": "alijonovmf1306@gmail.com",
+    "Password": "vwdnlrzrivwcnaoa"
   }
 }
