--- a/src/EduNet.Backend.Service/EduNet.Backend.Service.csproj
+++ b/src/EduNet.Backend.Service/EduNet.Backend.Service.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EduNet.Backend.Data\EduNet.Backend.Data.csproj" />
     <ProjectReference Include="..\EduNet.Backend.Domain\EduNet.Backend.Domain.csproj" />
   </ItemGroup>
 
