Applied new Migrations and new Database

--- a/src/EduNet.Backend.Api/appsettings.json
+++ b/src/EduNet.Backend.Api/appsettings.json
@@ -19,7 +19,6 @@
       "WithThreadId"
     ],
 
-
     "WriteTo": [
       {
         "Name": "File",
@@ -42,7 +41,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Port=5432; Database=EduNetDb; User Id=postgres; Password=1622;"
+    "DefaultConnection": "Host=localhost; Port=5432; Database=EduNetSystemDb; UserId=postgres; Password=1622;"
   },
   "Email": {
     "Host": "smtp.gmail.com",
